plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.1'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = '2023-edonymyeon'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'ch.qos.logback.contrib:logback-jackson:0.1.5'
	implementation 'ch.qos.logback.contrib:logback-json-classic:0.1.5'
	implementation 'net.logstash.logback:logstash-logback-encoder:6.1'

	testImplementation 'junit:junit:4.13.1'
	runtimeOnly 'com.h2database:h2'

    compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

	// sql 파라미터 보여준 애 나중에 지워잉
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

	// rest assured 추가
	testImplementation 'io.rest-assured:rest-assured:5.3.1'
}

tasks.named('test') {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

tasks.named('asciidoctor') {
	inputs.dir snippetsDir
	dependsOn test
}
